--- a/bulkloader.yaml
+++ b/bulkloader.yaml
@@ -3,16 +3,8 @@
 # At a minimum address the items marked with TODO:
 #  * Fill in connector and connector_options
 #  * Review the property_map.
-#    - Ensure the 'external_name' matches the name of your CSV column,
-#      XML tag, etc.
-#    - Check that __key__ property is what you want. Its value will become
-#      the key name on import, and on export the value will be the Key
-#      object.  If you would like automatic key generation on import and
-#      omitting the key on export, you can remove the entire __key__
-#      property from the property map.
 
-# If you have module(s) with your model classes, add them here. Also
-# change the kind properties to model_class.
+
 python_preamble:
 - import: base64
 - import: re
@@ -35,26 +27,20 @@ transformers:
 
     - property: stopID
       external_name: stop_id
-      # Type: STRING Stats: 0 properties of this type in this kind.
 
-    # Warning: This property is a duplicate, but with a different type.
-    # TODO: Edit this transform so only one property with this name remains.
     - property: name
       external_name: stop_name
-      # Type: String Stats: 57 properties of this type in this kind.
 
     - property: description
       external_name: stop_desc
-      # Type: STRING Stats: 0 properties of this type in this kind.
 
     - property: lat
       external_name: stop_lat
-      # Type: String Stats: 57 properties of this type in this kind.
+      import_transform: float
 
     - property: lon
       external_name: stop_lon
-      # Type: String Stats: 57 properties of this type in this kind.
+      import_transform: float
 
     - property: direction
       external_name: direction
-      # Type: String Stats: 57 properties of this type in this kind.
