--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: smsmybus-hrd
-version: newlogging
+version: outreach
 runtime: python
 api_version: 1
 
@@ -167,6 +167,7 @@ handlers:
 
 - url: /labs/.*
   script: labs/mapit.py
+  login: admin
 
 #
 # catch all...
