new users now get three free requests before the paywall goes up

--- a/index.yaml
+++ b/index.yaml
@@ -11,6 +11,12 @@ indexes:
   - name: phone
   - name: date
 
+- kind: PhoneLog
+  properties:
+  - name: phone
+  - name: date
+    direction: desc
+
 - kind: Caller
   properties:
   - name: phone
